2009-02-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, test/stageschema.sh, test/schema/*.mof:
	Optionally install test classes during postinstall step

2009-02-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, test/Makefile.am:
	Fixed [ 2610487 ] Make test suite optional

2009-02-12  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed [ 2590121 ] localConnectServer only retries once after interrupt

2009-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2551127 ] httpAdapter may not terminate
	(patch by Viktor Mihajlovski)

2009-02-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	Fixed [ 2583170 ] Add test rule including gcov 

2009-02-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac:
	Fixed [ 2581295 ] Add GNU code coverage tool support for SFCB.
	(patch from Surendra Kodali)

2009-02-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* genSslCert.sh:
	Fixed [ 2561165 ] The genSslCert.sh SSL certificate setup has tempfile 
	races. 
	(patch from Klaus Kämpf)

2009-02-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/unittest/Makefile.am, test/unittest/EmbeddedTests.c,
	  trace.h, trace.c:
	Initial framework for embedded unittest

2009-02-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
	Fixed [ 2192062 ] providerMgr doesn't check forkProvider() return values
	(patch from Klaus Kämpf)

2009-01-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, providerMgr.c:
	Fixed [ 2550426 ] Concurrency issue with LocalConnect

	* msgqueue.c:
	Fixed [ 2550880 ] sfcb sometimes hangs when processing large messages
	
2009-01-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2390533 ] Memory leak in httpAdapter.c
	(patch from John Powell)

2009-01-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
