@@ -1,6 +1,9 @@
 Changes in 1.3.4
 ================
 
+Bugs fixed:
+
+- 2592304 Memory leak in mofpp.c file.
 
 Changes in 1.3.3
 ================
